--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,8 @@ variables:
   webAppName: 'myferndeghsite'
   serviceConnection: 'Microsoft Azure Internal Consumption(e70483f4-853c-4100-b565-761a7435f343)'
   azureSubscriptionId: 'e70483f4-853c-4100-b565-761a7435f343'
-  loadTestResource: 'cicdloadtest_secretes'
-  loadTestResourceGroup: 'rg_cicdloadtest'
+  loadTestResource: 'cicdloadtest_secrets'
+  loadTestResourceGroup: 'rg_cicdloadtestgh'
   location: 'EAST US'
 
 
