--- a/SampleApp.yaml
+++ b/SampleApp.yaml
@@ -3,3 +3,10 @@ testName: SampleAppTest
 testPlan: SampleApp_Secrets.jmx
 description: 'SampleApp Test Run'
 engineInstances: 1
+secrets: |
+  [
+      {
+      "name": "appToken",
+      "value": "$(mySecret)"
+      }
+  ]
